# audio_graph

./: CMakeLists.txt  main.cpp  meep.json  vcpkg.json
examples/: needle.json
include/: audio_callback.h  audio_interface.h  audio_output_module.h  cjfilter_module.h  global_transport.h  graph.h  im_wrap.h  imgui_utils.h  interpolation.h  midi.h  midi_in_module.h  piano_roll.h  polysampler.h  resource.h  user_interface.h  vprint.h  vst3_module.h  xmodule.h
src/: audio_callback.cpp  audio_interface.cpp  audio_output_module.cpp  cjfilter_module.cpp  global_transport.cpp  graph.cpp  im_wrap.cpp  imgui_utils.cpp  interpolation.cpp  main.cpp  midi.cpp  midi_in_module.cpp  midi_sequencer_module.cpp  osc_module.cpp  piano_roll.cpp  polysampler.cpp  resource.cpp  user_interface.cpp  vst3_module.cpp  xmodule.cpp
src/modules/: add_sig_module.cpp  add_sig_module.h  allpass_filter.cpp  allpass_filter.h  allpass_module.cpp  allpass_module.h  audio_output_module.cpp  audio_output_module.h  biquad_module.cpp  biquad_module.h  cjfilter_module.cpp  cjfilter_module.h  downsampler_module.cpp  downsampler_module.h  envelope_plotter_module.cpp  envelope_plotter_module.h  float_module.cpp  float_module.h  map_sig_module.cpp  map_sig_module.h  midi_in_module.cpp  midi_in_module.h  midi_sequencer_module.cpp  midi_sequencer_module.h  mixer_module.cpp  mixer_module.h  multiply_sig_module.cpp  multiply_sig_module.h  osc_module.cpp  osc_module.h  parse_module.cpp  parse_module.h  polysampler.cpp  polysampler.h  polysampler_module.cpp  polysampler_module.h  polysynth.cpp  polysynth.h  polysynth_module.cpp  polysynth_module.h  (+6 more)
